# claims-ml

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DockerFile  Dockerfile  Dockerfile.test  Jenkinsfile  Makefile  README.md  mlflow.db  pyproject.toml  start_mlflow.bat
configs/: config.yaml
deploy/jenkins/: Dockerfile
models/production/: model.pkl
scripts/: eda.py  export_model.py  register_model.py  train_baseline.py  train_models.py  train_scripts.py
src/claims_ml/: __init__.py  config.py
src/claims_ml/data/: __init__.py  ingest.py  preprocess.py
src/claims_ml/features/: __init__.py  build.py  split.py
src/claims_ml/models/: __init__.py  baseline.py  candidates.py  evaluate.py  register.py  train.py
src/claims_ml/serving/: __init__.py  app.py
tests/: test_app.py  test_candidates.py  test_evaluate.py  test_features.py  test_ingest.py  test_preprocess.py  test_register.py  test_smoke.py  test_split.py
